# try-py

./: .gitignore  CLAUDE.md  PORTING.md  README.md  hk.pkl  pyproject.toml
src/try_py/: __init__.py  cli.py  fuzzy.py  selector.py  shell.py  ui.py
